<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/listing_background"
    >

    <EditText
        android:hint="@string/hint_place_name"
        android:textColor="@color/place_query_text"
        android:imeOptions="actionSearch"
        android:singleLine="true"
        android:lines="1"
        android:id="@+id/etPlace"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:layout_below="@id/etPlace"
        android:visibility="invisible"
        android:indeterminate="true"
        android:id="@+id/pbLoading"
        style="@android:style/Widget.Holo.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageButton
        android:contentDescription="@string/con_des_cache_settings"
        android:id="@+id/btSettings"
        android:layout_alignBottom="@+id/btGetWeather"
        android:layout_alignTop="@+id/btGetWeather"
        android:src="@drawable/ic_settings_applications_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_toRightOf="@id/btSettings"
        android:layout_below="@id/pbLoading"
        android:id="@+id/btGetWeather"
        android:textAllCaps="false"
        android:text="@string/label_get_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:lines="1"
        android:ellipsize="end"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:layout_toRightOf="@+id/btGetWeather"
        android:layout_alignBottom="@+id/btGetWeather"
        android:layout_alignTop="@+id/btGetWeather"
        tools:text="Error!"
        android:textColor="@color/error_text"
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:contentDescription="@string/con_des_forecast_list"
        android:layout_below="@id/btGetWeather"
        android:id="@+id/rcvWeatherForecast"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>